--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">WordSmith</string>
+    <string name="req_pass">Request New Password</string>
+    <string name="slogan">Narrate your future with us</string>
+    <string name="login">Login</string>
+    <string name="chapter_title">Chapter One: Origin of the Unknown</string>
+    <string name="chapter_text">Chapter 1</string>
+    <string name="novel_by">Novel By: Sophea Do</string>
+    <string name="explore">Explore</string>
 </resources>
