added night more, landscape, and alternative resources like languages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="chapter_text">Chapter 1</string>
     <string name="novel_by">Novel By: Sophea Do</string>
     <string name="explore">Explore</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+
 </resources>
