Pulling data from the database fix

--- a/app/src/main/res/values-km/strings.xml
+++ b/app/src/main/res/values-km/strings.xml
@@ -13,4 +13,5 @@
     <string name="menu_logout">ចាកចេញ</string>
     <string name="click_to_read">ចុចត្រង់នេះដើម្បីអានរឿង</string>
     <string name="write_story">សរសេររឿងផ្ទាល់ខ្លួនរបស់អ្នក</string>
+    <string name="read_novel">ចុចអាន</string>
 </resources>
